tests/NormalTests/paczka1/fuzzy1/72335432.err
Error in line 2: S980 A831 34,3
Error in line 26: t4o S980 315,2
Error in line 28: z9mHZH A510 55,2
